<resources>
    <string name="app_name">Rtctrack</string>

    <string name="action_settings">Settings</string>
    <string name="please_signin">welcome</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="signout">Signout</string>
    <string name="map_view">map view</string>
    <string name="near_by_friends">near by friends</string>
    <string name="normal">normal</string>
    <string name="satilite">satilite</string>
    <string name="signin">signin</string>
    <string name="title_activity_maps">Map</string>
    <string name="gps_network_not_enabled">gps is not enabled</string>
    <string name="open_location_settings">ENABLE</string>
    <string name="Cancel">cancel</string>
    <string name="host_location">Host location</string>
    <string name="back_to_main">Back to main</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
</resources>
